err/commerce.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/commerce'...
Listing './lib/python3.5/site-packages/commerce/old'...
Compiling './lib/python3.5/site-packages/commerce/old/basket.py'...
***   File "./lib/python3.5/site-packages/commerce/old/basket.py", line 225
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commerce/old/baskethelper.py'...
***   File "./lib/python3.5/site-packages/commerce/old/baskethelper.py", line 41
    print "Switching to command_add_old"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/commerce/old/basketpage.py'...
***   File "./lib/python3.5/site-packages/commerce/old/basketpage.py", line 232
    print '>>DEBUG', mess, r
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/commerce/tests'...
Listing './lib/python3.5/site-packages/commerce-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
